--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kerala Red Stone Enterprise - കേരള ചെങ്കല്ല് എന്റർപ്രൈസ്</title>
+    <title>Galaxy Stone Enterprise - ഗാലക്സി സ്റ്റോൺ എന്റർപ്രൈസ്</title>
     <link rel="stylesheet" href="style.css">
     <meta name="description" content="Professional laterite stone cutting services in Kerala. വിശ്വസനീയമായ ചെങ്കല്ല് മുറിക്കൽ സേവനം">
 </head>
@@ -433,4 +433,5 @@
 
     <script src="app.js"></script>
 </body>
+
 </html>
