changed email details and instructions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="nav-brand">
                 <div class="logo-container">
                     <!-- ADD YOUR LOGO IMAGE PATH HERE -->
-                    <img src="images/logo2.jpg" alt="Company Logo" class="logo-img">
+                    <img src="images/logo_main.jpg" alt="Company Logo" class="logo-img">
                     <!-- If you don't have a logo yet, the placeholder will show -->
                     <div class="logo-placeholder" style="display: none;">Logo</div>
                 </div>
@@ -183,8 +183,8 @@
                 </button>
                 <div id="instructions-text" class="instructions-text">
                     <ul>
-                        <li>Enter the quantity of stones needed.</li>
-                        <li>Select your delivery location range to get accurate pricing. <br><span class="malayalam">നിങ്ങളുടെ അഡ്രസിന് സമീപമുള്ള ഡെലിവറി ലോക്കേഷൻ തിരഞ്ഞെടുക്കുക.</span></li>
+                        <li>Enter the quantity of stones needed. <br><span class="malayalam">ആവശ്യമായ കല്ലുകളുടെ എണ്ണം നൽകുക.</span></li>
+                        <li>Select your delivery location range to get accurate pricing. <br><span class="malayalam">കൃത്യമായ വില ലഭിക്കാൻ നിങ്ങളുടെ ഡെലിവറി ലൊക്കേഷൻ തിരഞ്ഞെടുക്കുക.</span></li>
                         <li>Click "Calculate Price" to see the total.</li>
                     </ul>
                 </div>
@@ -424,14 +424,14 @@
                         <div class="contact-icon">📧</div>
                         <div class="contact-details">
                             <h4>Email</h4>
-                            <p>info@keralaredstone.com</p>
+                            <p>galaxyenterprisesofficial25@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon">📍</div>
                         <div class="contact-details">
                             <h4>Address</h4>
-                            <p>കാസർഗോഡ് ജില്ല, കേരളം</p>
+                            <p>ചീമേനി, കാസർഗോഡ് ജില്ല, കേരളം</p>
                             <p>kasargod District, Kerala</p>
                         </div>
                     </div>
@@ -439,7 +439,7 @@
                         <div class="contact-icon">⏰</div>
                         <div class="contact-details">
                             <h4>സമയം (Business Hours)</h4>
-                            <p>Monday - Saturday: 8:00 AM - 6:00 PM</p>
+                            <p>Monday - Saturday: <br>8:00 AM - 6:00 PM</p>
                         </div>
                     </div>
                 </div>
@@ -468,8 +468,8 @@
                 <div class="footer-section">
                     <h4>Contact Info</h4>
                     <p>📞 +91 8330052341</p>
-                    <p>📧 info@keralaredstone.com</p>
-                    <p>📍 kasargod District, Kerala</p>
+                    <p>galaxyenterprisesofficial25@gmail.com</p>
+                    <p>📍 Cheemeni, kasargod District, Kerala</p>
                 </div>
             </div>
             <div class="footer-bottom">
